0.45 2022-05-11
        - Added confidential client support to OAuth. (diewald)
        - Added OAuth client authorization handling. (diewald)
        - Mark public clients as slightly more insecure. (diewald)
        - Reintroduce email handle support. (fixes #165; diewald)
        - Support plugin declarations on registration. (diewald)

0.44 2022-02-31
        - Fixed autosecrets migration. (diewald)
        - Format page numbers in pagination. (diewald)
        - Introduce tei2korapxml command via plugin. (diewald)
        - Introduce korapxml2tei command via plugin. (diewald)
        - Plugin toggle states are now managed by the state
          manager and can therefore survive URL changes. (diewald)
        - Add KorAP::XML::Krill and KorAP::XML::TEI to
          Dockerfile. (diewald)
        - Improve handling of invalid URIs in attachements. (diewald)

0.43 2021-11-05
        - New menu class that has an entry at the very end,
          similar to the input text prefix,
          that is always available. (lerepp)
        - Fix error message in case of server error (500)
          response.
        - Added utility funcition to util that gets all direct
          childNodes of a given element by a tag or class. (lerepp)
        - Remove 'X-Frame-Options' in favor of 'frame-ancestors'
          as a CSP rule.
        - Fix CSS compression for new SASS compiler.
        - Support dynamic menu extensions.
        - Dynamically extend buttongroup menus.
        - Update to menu.js's removeItems function to only delete
          direct childNodes aswell as a specification to test for it. (lerepp)
        - Make actions private in panels and views.
        - Move pagination out of resultinfo.
        - Add support for "adopted" button groups and anchor children
          to prepend to.
        - New menu class that has a container for further
          entries at the very end that is always available. (lerepp)