@@ -4,6 +4,7 @@
         - Mark public clients as slightly more insecure. (diewald)
         - Reintroduce email handle support. (fixes #165; diewald)
         - Support plugin declarations on registration. (diewald)
+        - Fetch client information before grant request. (diewald)
 
 0.44 2022-02-31
         - Fixed autosecrets migration. (diewald)
